# music-script

./: README.md  download.py  pyproject.toml
src/musicscript/: __init__.py  album.py  get_genius_lyrics.py  lyrics.py  song.py  utils.py
test/: test_genius_link.py  test_genius_live_link.py  test_genius_remove_feature.py  test_tiltle_cleanup.py
