[project]
name = "musicscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Meek Msaki", email = "98189596+mmsaki@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
musicscript = "musicscript:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
